[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subpubpy"
version = "0.0.1"
authors = [
  { name="Rahul Singh", email="rajput.rahul8510@gmail.com" },
]
description = "Multithreading supported python package for publisher and subscriber model."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Rahul-singh98/subpubpy"